<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout
    android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/top_panel"
        android:layout_width="wrap_content"
        android:layout_height="320dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="331dp"
            android:layout_marginRight="50dp">

            <RelativeLayout
                android:layout_width="230dp"
                android:layout_height="300dp"
                android:layout_alignParentBottom="true">

                <ImageView
                    android:layout_width="230dp"
                    android:layout_height="300dp"
                    android:src="@drawable/left_hand" />

                <ImageButton
                    android:id="@+id/left_small"
                    android:layout_width="35dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="45dp"
                    android:clickable="true"
                    android:background="@null"
                    android:src="@drawable/l_small_blue" />

                <ImageButton
                    android:id="@+id/left_ring"
                    android:layout_width="35dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    android:background="@null"
                    android:src="@drawable/l_ring_blue" />

                <ImageButton
                    android:id="@+id/left_middle"
                    android:layout_width="35dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="3dp"
                    android:clickable="true"
                    android:background="@null"
                    android:src="@drawable/l_middle_blue" />

                <ImageButton
                    android:id="@+id/left_index"
                    android:layout_width="35dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="130dp"
                    android:layout_marginTop="20dp"
                    android:clickable="true"
                    android:background="@null"
                    android:src="@drawable/l_index_blue" />

                <ImageButton
                    android:id="@+id/left_thumb"
                    android:layout_width="50dp"
                    android:layout_height="90dp"
                    android:layout_below="@+id/left_index"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="19dp"
                    android:layout_toRightOf="@+id/left_index"
                    android:clickable="true"
                    android:background="@null"
                    android:src="@drawable/l_thumb_blue" />


            </RelativeLayout>


            <ImageView
                android:id="@+id/left_thumb_marker"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_marginLeft="205dp"
                android:layout_marginTop="120dp" />

            <ImageView
                android:id="@+id/left_index_marker"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="10dp" />

            <ImageView
                android:id="@+id/left_middle_marker"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="0dp" />

            <ImageView
                android:id="@+id/left_ring_marker"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_marginLeft="62dp"
                android:layout_marginTop="10dp" />

            <ImageView
                android:id="@+id/left_small_marker"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="40dp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fingerprint_text"
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/place_right_thumb"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="240dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:src="@drawable/frame" />

                <ImageView
                    android:id="@+id/fingerprint_image"
                    android:layout_width="190dp"
                    android:layout_height="240dp"
                    android:layout_marginLeft="26dp"
                    android:layout_marginTop="15dp"
                    android:scaleType="fitXY" />
            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="331dp">

            <RelativeLayout
                android:layout_width="230dp"
                android:layout_height="300dp"
                android:layout_alignParentBottom="true">

                <ImageView
                    android:layout_width="230dp"
                    android:layout_height="300dp"
                    android:src="@drawable/right_hand" />

                <ImageButton
                    android:id="@+id/right_thumb"
                    android:layout_width="50dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="9dp"
                    android:layout_marginTop="123dp"
                    android:clickable="true"
                    android:background="@null"
                    android:src="@drawable/r_thumb_blue" />

                <ImageButton
                    android:id="@+id/right_index"
                    android:layout_width="35dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="66dp"
                    android:layout_marginTop="22dp"
                    android:clickable="true"
                    android:background="@null"
                    android:src="@drawable/r_index_blue" />

                <ImageButton
                    android:id="@+id/right_middle"
                    android:layout_width="35dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="106dp"
                    android:layout_marginTop="5dp"
                    android:clickable="true"
                    android:background="@null"
                    android:src="@drawable/r_middle_blue" />

                <ImageButton
                    android:id="@+id/right_ring"
                    android:layout_width="35dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="146dp"
                    android:layout_marginTop="18dp"
                    android:clickable="true"
                    android:background="@null"
                    android:src="@drawable/r_ring_blue" />

                <ImageButton
                    android:id="@+id/right_small"
                    android:layout_width="35dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="187dp"
                    android:layout_marginTop="45dp"
                    android:clickable="true"
                    android:background="@null"
                    android:src="@drawable/r_small_blue" />


            </RelativeLayout>

            <ImageView
                android:id="@+id/right_thumb_marker"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="115dp"
                android:src="@drawable/down_arrow" />

            <ImageView
                android:id="@+id/right_index_marker"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="10dp" />

            <ImageView
                android:id="@+id/right_middle_marker"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_marginLeft="115dp"
                android:layout_marginTop="0dp" />

            <ImageView
                android:id="@+id/right_ring_marker"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="10dp" />

            <ImageView
                android:id="@+id/right_small_marker"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_marginLeft="195dp"
                android:layout_marginTop="40dp" />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout android:layout_width="wrap_content" android:layout_height="280dp" android:layout_marginTop="10dp" android:layout_below="@+id/top_panel" android:layout_centerHorizontal="true">

        <LinearLayout android:orientation="vertical" android:id="@+id/left_score_table" android:background="@drawable/table_cell_border" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp">

            <LinearLayout android:orientation="horizontal" android:background="@drawable/table_cell_border" android:layout_width="wrap_content" android:layout_height="wrap_content">

                <TextView android:textSize="12sp" android:gravity="center" android:id="@+id/left_text" android:background="@drawable/table_cell_border" android:layout_width="50dp" android:layout_height="40dp" android:text="@string/left"/>

                <TextView android:textSize="12sp" android:gravity="center" android:id="@+id/left_thumb_text" android:background="@drawable/table_cell_border" android:layout_width="50dp" android:layout_height="40dp" android:text="@string/thumb"/>
                <TextView android:textSize="12sp" android:gravity="center" android:id="@+id/left_index_text" android:background="@drawable/table_cell_border" android:layout_width="50dp" android:layout_height="40dp" android:text="@string/index"/>
                <TextView android:textSize="12sp" android:gravity="center" android:id="@+id/left_middle_text" android:background="@drawable/table_cell_border" android:layout_width="50dp" android:layout_height="40dp" android:text="@string/middle"/>
                <TextView android:textSize="12sp" android:gravity="center" android:id="@+id/left_ring_text" android:background="@drawable/table_cell_border" android:layout_width="50dp" android:layout_height="40dp" android:text="@string/ring"/>
                <TextView android:textSize="12sp" android:gravity="center" android:id="@+id/left_small_text" android:background="@drawable/table_cell_border" android:layout_width="50dp" android:layout_height="40dp" android:text="@string/small"/>


            </LinearLayout>

            <LinearLayout android:orientation="horizontal" android:background="@drawable/table_cell_border" android:layout_width="wrap_content" android:layout_height="wrap_content">

                <TextView android:textSize="12sp" android:gravity="center" android:id="@+id/left_score_text" android:background="@drawable/table_cell_border" android:layout_width="50dp" android:layout_height="40dp" android:layout_marginTop="-1dp" android:text="@string/score"/>

                <TextView android:textSize="12sp" android:textStyle="bold" android:textColor="@android:color/black" android:gravity="center" android:id="@+id/left_thumb_score_text" android:background="@drawable/table_cell_border" android:layout_width="50dp" android:layout_height="40dp" android:layout_marginTop="-1dp"/>
                <TextView android:textSize="12sp" android:textStyle="bold" android:textColor="@android:color/black" android:gravity="center" android:id="@+id/left_index_score_text" android:background="@drawable/table_cell_border" android:layout_width="50dp" android:layout_height="40dp" android:layout_marginTop="-1dp"/>
                <TextView android:textSize="12sp" android:textStyle="bold" android:textColor="@android:color/black" android:gravity="center" android:id="@+id/left_middle_score_text" android:background="@drawable/table_cell_border" android:layout_width="50dp" android:layout_height="40dp" android:layout_marginTop="-1dp"/>
                <TextView android:textSize="12sp" android:textStyle="bold" android:textColor="@android:color/black" android:gravity="center" android:id="@+id/left_ring_score_text" android:background="@drawable/table_cell_border" android:layout_width="50dp" android:layout_height="40dp" android:layout_marginTop="-1dp"/>
                <TextView android:textSize="12sp" android:textStyle="bold" android:textColor="@android:color/black" android:gravity="center" android:id="@+id/left_small_score_text" android:background="@drawable/table_cell_border" android:layout_width="50dp" android:layout_height="40dp" android:layout_marginTop="-1dp"/>


            </LinearLayout>



        </LinearLayout>

        <Button android:textSize="18sp" android:id="@+id/doneBtn" android:background="@drawable/b_done_dis_no_text" android:layout_width="215dp" android:layout_height="80dp" android:layout_marginLeft="35dp" android:layout_marginTop="10dp" android:text="@string/done" android:layout_toRightOf="@+id/left_score_table"/>

        <TextView
            android:id="@+id/click_fingerprint"
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/click_fingerprint"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <LinearLayout android:orientation="vertical" android:id="@+id/right_score_table" android:background="@drawable/table_cell_border" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginTop="10dp" android:layout_toRightOf="@+id/doneBtn">

            <LinearLayout android:orientation="horizontal" android:background="@drawable/table_cell_border" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textSize="12sp" android:gravity="center" android:id="@+id/right_text" android:background="@drawable/table_cell_border" android:layout_width="50dp" android:layout_height="40dp" android:text="@string/right"/>

                <TextView android:textSize="12sp" android:gravity="center" android:id="@+id/right_thumb_text" android:background="@drawable/table_cell_border" android:layout_width="50dp" android:layout_height="40dp" android:text="@string/thumb"/>
                <TextView android:textSize="12sp" android:gravity="center" android:id="@+id/right_index_text" android:background="@drawable/table_cell_border" android:layout_width="50dp" android:layout_height="40dp" android:text="@string/index"/>
                <TextView android:textSize="12sp" android:gravity="center" android:id="@+id/right_middle_text" android:background="@drawable/table_cell_border" android:layout_width="50dp" android:layout_height="40dp" android:text="@string/middle"/>
                <TextView android:textSize="12sp" android:gravity="center" android:id="@+id/right_ring_text" android:background="@drawable/table_cell_border" android:layout_width="50dp" android:layout_height="40dp" android:text="@string/ring"/>
                <TextView android:textSize="12sp" android:gravity="center" android:id="@+id/right_small_text" android:background="@drawable/table_cell_border" android:layout_width="50dp" android:layout_height="40dp" android:text="@string/small"/>

            </LinearLayout>

            <LinearLayout android:orientation="horizontal" android:background="@drawable/table_cell_border" android:layout_width="wrap_content" android:layout_height="wrap_content">

                <TextView android:textSize="12sp" android:gravity="center" android:id="@+id/right_score_text" android:background="@drawable/table_cell_border" android:layout_width="50dp" android:layout_height="40dp" android:layout_marginTop="-1dp" android:text="@string/score"/>

                <TextView android:textSize="12sp" android:textStyle="bold" android:textColor="@android:color/black" android:gravity="center" android:id="@+id/right_thumb_score_text" android:background="@drawable/table_cell_border" android:layout_width="50dp" android:layout_height="40dp" android:layout_marginTop="-1dp"/>
                <TextView android:textSize="12sp" android:textStyle="bold" android:textColor="@android:color/black" android:gravity="center" android:id="@+id/right_index_score_text" android:background="@drawable/table_cell_border" android:layout_width="50dp" android:layout_height="40dp" android:layout_marginTop="-1dp"/>
                <TextView android:textSize="12sp" android:textStyle="bold" android:textColor="@android:color/black" android:gravity="center" android:id="@+id/right_middle_score_text" android:background="@drawable/table_cell_border" android:layout_width="50dp" android:layout_height="40dp" android:layout_marginTop="-1dp"/>
                <TextView android:textSize="12sp" android:textStyle="bold" android:textColor="@android:color/black" android:gravity="center" android:id="@+id/right_ring_score_text" android:background="@drawable/table_cell_border" android:layout_width="50dp" android:layout_height="40dp" android:layout_marginTop="-1dp"/>
                <TextView android:textSize="12sp" android:textStyle="bold" android:textColor="@android:color/black" android:gravity="center" android:id="@+id/right_small_score_text" android:background="@drawable/table_cell_border" android:layout_width="50dp" android:layout_height="40dp" android:layout_marginTop="-1dp"/>


            </LinearLayout>

        </LinearLayout>



    </RelativeLayout>


</RelativeLayout>
</ScrollView>
</HorizontalScrollView>